--- a/peermap/ui/package.json
+++ b/peermap/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
